# adventofcode

./: .gitignore  README.md  adventofcode.code-workspace  cargo.toml  pyproject.toml
2015/: 08.md  08.py  2015_22.py  2015_22.txt  puzzle_handler.py
2018/: 1.py  2.py  3.py  4.py  5.py  6.py
2019/: 01.py  02.py  02.txt  03.py  03.txt  04.py  04.txt  05.py  05.txt  06.py  06.txt  07.txt  08.py  08.txt  09.py  09.txt  10.py  10.txt
2020/: 01.md  01.py  02.md  02.py  03.md  03.py  04.md  04.py  05.md  05.py  06.md  06.py  31.data  31.results.i7  speedtest.py
2021/: 01.go  01.md  01.py  01.rs  01_beauty.py  01_simple.py  01_speedtest.md  02.md  02.py  03.md  03.py  log.py  puzzle_handler.py
2022/: 01.csx  01.md  01.py  01.rs  02.md  02.py  03.md  03.py  04.py  05.py  06.py  07.py  handler.py  inout.py
tests/: conftest.py  test_2022_07.py  tests.py
