[tool.poetry]
name = "adventofcode"
version = "1.0.0"
description = "Solutions for adventofcode, mostly written in the python language"
authors = ["oryon-dominik <oryon@cyberise.de>"]

[tool.poetry.dependencies]
python = "^3.10"
parse = "^1.18.0"
numpy = "^1.19.4"
httpx = "^0.21.1"
rich = "^10.15.1"
fastapi = "^0.70.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
playwright = "^1.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
