[tool.poetry]
name = "adventofcode"
version = "1.22.0"
description = "Solutions for adventofcode, mostly written in the python language"
authors = ["oryon-dominik <oryon@cyberise.de>"]

[tool.poetry.dependencies]
python = "^3.11.0"
rich = "^12.6.0"
parse = "^1.19.0"
httpx = "^0.23.1"
fastapi = "^0.88.0"
python-dotenv = "^0.21.0"
numpy = "^1.23.5"
humanize = "^4.4.0"
more-itertools = "^9.0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
playwright = "^1.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
