[tool.poetry]
name = "adventofcode"
version = "1.22.0"
description = "Solutions for adventofcode, mostly written in the python language"
authors = ["oryon-dominik <oryon@cyberise.de>"]

[tool.poetry.dependencies]
python = "^3.11.0"
rich = "^12.6.0"
parse = "^1.19.0"
httpx = "^0.23.1"
fastapi = "^0.88.0"
python-dotenv = "^0.21.0"
numpy = "^1.23.5"
humanize = "^4.4.0"
more-itertools = "^9.0.0"
pytest = "^7.2.0"
pytest-rich = "^0.1.1"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
playwright = "^1.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = ""
markers = [
  "wip: Work In Progress",
  "slow: mark a test that takes a long time to run.",
]
console_output_style = "progress"
python_files = "tests.py test_*.py *_tests.py"
norecursedirs = ".git"
